# siridb-server

./: .gitignore  CMakeLists.txt
Debug/: objects.mk
Debug/src/siri/db/: subdir.mk
cmake/: version.h.in
grammar/: grammar.py
include/cexpr/: cexpr.h
include/qpextra/: qpextra.h
include/siri/: version.h
include/siri/admin/: account.h  client.h  request.h
include/siri/db/: aggregate.h  auth.h  db.h  insert.h  misc.h  points.h  props.h  query.h  series.h  user.h
include/siri/grammar/: grammar.h
include/siri/net/: pkg.h
include/timeit/: timeit.h
src/cexpr/: cexpr.c
src/qpextra/: qpextra.c
src/siri/: heartbeat.c  siri.c
src/siri/db/: access.c  aggregate.c  db.c  forward.c  initsync.c  insert.c  presuf.c  props.c  query.c  reindex.c  replicate.c  servers.c  shard.c  tasks.c  users.c
src/siri/grammar/: grammar.c
src/siri/net/: clserver.c
src/siri/parser/: listener.c
src/test/: test.c
src/timeit/: timeit.c
test/: test_user.py
